objects/ESC_EntitlementSelectorFields__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>ESC_Case_Field1__c</fullName>
        <label>Case Field1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field2__c</fullName>
        <label>Case Field2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Case_Field3__c</fullName>
        <label>Case Field3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EntitlementSelectorFields</label>
</CustomObject>